Fix #31726 - [Bug] Filter null nodeRefs in regulatory limiting ingredients